Revert last bad commit (failed merge attempt)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/cfa-single-loop-transformation@38780 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c