@@ -14,6 +14,7 @@ import com.google.common.collect.Collections2;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.TreeMultimap;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -25,7 +26,6 @@ import java.util.logging.Level;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.eclipse.cdt.core.dom.ast.ASTVisitor;
 import org.eclipse.cdt.core.dom.ast.IASTASMDeclaration;
-import org.eclipse.cdt.core.dom.ast.IASTComment;
 import org.eclipse.cdt.core.dom.ast.IASTDeclaration;
 import org.eclipse.cdt.core.dom.ast.IASTFileLocation;
 import org.eclipse.cdt.core.dom.ast.IASTFunctionDefinition;
@@ -38,10 +38,7 @@ import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.common.log.LogManagerWithoutDuplicates;
 import org.sosy_lab.cpachecker.cfa.ParseResult;
-import org.sosy_lab.cpachecker.cfa.ParseResultWithCommentLocations;
 import org.sosy_lab.cpachecker.cfa.ast.ADeclaration;
-import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
-import org.sosy_lab.cpachecker.cfa.ast.acsl.util.SyntacticBlock;
 import org.sosy_lab.cpachecker.cfa.ast.c.CAstNode;
 import org.sosy_lab.cpachecker.cfa.ast.c.CComplexTypeDeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.c.CDeclaration;
@@ -83,10 +80,6 @@ class CFABuilder extends ASTVisitor {
 
   // Data structure for checking amount of initializations per global variable
   private final Set<String> globalInitializedVariables = new HashSet<>();
-
-  // Data structures for storing locations of ACSL annotations
-  private final List<FileLocation> acslCommentPositions = new ArrayList<>();
-  private final List<SyntacticBlock> blocks = new ArrayList<>();
 
   private final List<Path> parsedFiles = new ArrayList<>();
 
@@ -131,7 +124,7 @@ class CFABuilder extends ASTVisitor {
     shutdownNotifier.shutdownIfNecessary();
 
     if (!isNullOrEmpty(ast.getFilePath())) {
-      parsedFiles.add(Path.of(ast.getFilePath()));
+      parsedFiles.add(Paths.get(ast.getFilePath()));
     }
     sideAssignmentStack = new Sideassignments();
     artificialScope = pFallbackScope;
@@ -158,15 +151,6 @@ class CFABuilder extends ASTVisitor {
         Triple.of(new ArrayList<IASTFunctionDefinition>(), staticVariablePrefix, fileScope));
 
     ast.accept(this);
-
-    if (options.shouldCollectACSLAnnotations()) {
-      for (IASTComment comment : ast.getComments()) {
-        String commentString = String.valueOf(comment.getComment());
-        if (commentString.startsWith("/*@") || commentString.startsWith("//@")) {
-          acslCommentPositions.add(astCreator.getLocation(comment));
-        }
-      }
-    }
 
     shutdownNotifier.shutdownIfNecessary();
   }
@@ -215,6 +199,11 @@ class CFABuilder extends ASTVisitor {
       return PROCESS_SKIP;
 
     } else if (declaration instanceof IASTProblemDeclaration) {
+      // CDT parser struggles on GCC's __attribute__((something)) constructs
+      // because we use C99 as default.
+      // Either insert the following macro before compiling with CIL:
+      // #define  __attribute__(x)  /*NOTHING*/
+      // or insert "parser.dialect = GNUC" into properties file
       visit(((IASTProblemDeclaration)declaration).getProblem());
       sideAssignmentStack.leaveBlock();
       return PROCESS_SKIP;
@@ -224,8 +213,7 @@ class CFABuilder extends ASTVisitor {
       encounteredAsm = true;
       @Nullable IASTFileLocation fileloc = declaration.getFileLocation();
       if (fileloc != null) {
-        logger.log(
-            Level.FINER, "Ignoring inline assembler code at line", fileloc.getStartingLineNumber());
+        logger.log(Level.FINER, "Ignoring inline assembler code at line", fileloc.getStartingLineNumber());
       } else {
         logger.log(Level.FINER, "Ignoring inline assembler code at unknown line.");
       }
@@ -361,16 +349,12 @@ class CFABuilder extends ASTVisitor {
     }
 
     if (checkBinding.foundUndefinedIdentifiers()) {
-      throw new CParserException(
-          "Invalid C code because of undefined identifiers mentioned above.");
+      throw new CParserException("Invalid C code because of undefined identifiers mentioned above.");
     }
 
-    if (acslCommentPositions.isEmpty()) {
-      return new ParseResult(cfas, cfaNodes, globalDecls, parsedFiles);
-    }
+    ParseResult result = new ParseResult(cfas, cfaNodes, globalDecls, parsedFiles);
 
-    return new ParseResultWithCommentLocations(
-        cfas, cfaNodes, globalDecls, parsedFiles, acslCommentPositions, blocks);
+    return result;
   }
 
   private void handleFunctionDefinition(
@@ -406,13 +390,8 @@ class CFABuilder extends ASTVisitor {
     String functionName = startNode.getFunctionName();
 
     if (cfas.containsKey(functionName)) {
-      throw new CFAGenerationRuntimeException(
-          "Duplicate function "
-              + functionName
-              + " in "
-              + startNode.getFileLocation()
-              + " and "
-              + cfas.get(functionName).getFileLocation());
+      throw new CFAGenerationRuntimeException("Duplicate function " + functionName
+          + " in " + startNode.getFileLocation() + " and " + cfas.get(functionName).getFileLocation());
     }
     cfas.put(functionName, startNode);
     cfaNodes.putAll(functionName, functionBuilder.getCfaNodes());
@@ -423,7 +402,6 @@ class CFABuilder extends ASTVisitor {
     globalDecls.addAll(functionBuilder.getGlobalDeclarations());
 
     encounteredAsm |= functionBuilder.didEncounterAsm();
-    blocks.addAll(functionBuilder.getBlocks());
     functionBuilder.finish();
   }
 
