@@ -8,16 +8,13 @@
 
 package org.sosy_lab.cpachecker.cfa.parser.llvm;
 
-import static org.sosy_lab.cpachecker.cfa.types.c.CTypes.isIntegerType;
-import static org.sosy_lab.cpachecker.cfa.types.c.CTypes.isSignedIntegerType;
-import static org.sosy_lab.llvm_j.Value.OpCode.AShr;
-
-import com.google.common.base.CharMatcher;
+import com.google.common.base.Optional;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.TreeMultimap;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -25,7 +22,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.NavigableMap;
-import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.TreeMap;
 import java.util.logging.Level;
@@ -68,7 +64,6 @@ import org.sosy_lab.cpachecker.cfa.ast.c.CUnaryExpression.UnaryOperator;
 import org.sosy_lab.cpachecker.cfa.ast.c.CVariableDeclaration;
 import org.sosy_lab.cpachecker.cfa.model.BlankEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
-import org.sosy_lab.cpachecker.cfa.model.CFALabelNode;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.cfa.model.CFATerminationNode;
 import org.sosy_lab.cpachecker.cfa.model.FunctionEntryNode;
@@ -76,6 +71,7 @@ import org.sosy_lab.cpachecker.cfa.model.FunctionExitNode;
 import org.sosy_lab.cpachecker.cfa.model.c.CAssumeEdge;
 import org.sosy_lab.cpachecker.cfa.model.c.CDeclarationEdge;
 import org.sosy_lab.cpachecker.cfa.model.c.CFunctionEntryNode;
+import org.sosy_lab.cpachecker.cfa.model.c.CLabelNode;
 import org.sosy_lab.cpachecker.cfa.model.c.CReturnStatementEdge;
 import org.sosy_lab.cpachecker.cfa.model.c.CStatementEdge;
 import org.sosy_lab.cpachecker.cfa.types.MachineModel;
@@ -160,7 +156,7 @@ public class CFABuilder {
 
   public ParseResult build(final Module pModule, final String pFilename) throws LLVMException {
     visit(pModule, pFilename);
-    List<Path> input_file = ImmutableList.of(Path.of(pFilename));
+    List<Path> input_file = ImmutableList.of(Paths.get(pFilename));
 
     return new ParseResult(functions, cfaNodes, globalDeclarations, input_file);
   }
@@ -257,7 +253,7 @@ public class CFABuilder {
       // create the basic blocks and instructions of the function.
       // A basic block is mapped to a pair <entry node, exit node>
       NavigableMap<Integer, BasicBlockInfo> basicBlocks = new TreeMap<>();
-      CFALabelNode entryBB = iterateOverBasicBlocks(currFunc, en, basicBlocks, pFileName);
+      CLabelNode entryBB = iterateOverBasicBlocks(currFunc, en, basicBlocks, pFileName);
 
       // add the edge from the entry of the function to the first
       // basic block
@@ -309,9 +305,9 @@ public class CFABuilder {
    *
    * <p>Add a label created for every basic block to a mapping passed as an argument.
    *
-   * @return the entry basic block (as a {@link CFALabelNode}).
+   * @return the entry basic block (as a CLabelNode).
    */
-  private CFALabelNode iterateOverBasicBlocks(
+  private CLabelNode iterateOverBasicBlocks(
       final Function pFunction,
       final FunctionEntryNode pEntryNode,
       final NavigableMap<Integer, BasicBlockInfo> pBasicBlocks,
@@ -321,10 +317,10 @@ public class CFABuilder {
       return null;
     }
 
-    CFALabelNode entryBB = null;
+    CLabelNode entryBB = null;
     for (BasicBlock block : pFunction) {
       // process this basic block
-      CFALabelNode label = new CFALabelNode(pEntryNode.getFunction(), getBBName(block));
+      CLabelNode label = new CLabelNode(pEntryNode.getFunction(), getBBName(block));
       addNode(pEntryNode.getFunctionName(), label);
       if (entryBB == null) {
         entryBB = label;
@@ -372,7 +368,7 @@ public class CFABuilder {
         continue;
       } else if (succNum == 1) {
         BasicBlock succ = terminatorInst.getSuccessor(0);
-        CFALabelNode label = (CFALabelNode) pBasicBlocks.get(succ.hashCode()).getEntryNode();
+        CLabelNode label = (CLabelNode) pBasicBlocks.get(succ.hashCode()).getEntryNode();
 
         addEdge(new BlankEdge("(goto)", FileLocation.DUMMY, brNode, label, "(goto)"));
         continue;
@@ -381,7 +377,7 @@ public class CFABuilder {
         CExpression conditionForElse = getBranchConditionForElse(terminatorInst, pFileName);
 
         BasicBlock succ = terminatorInst.getSuccessor(0);
-        CFALabelNode label = (CFALabelNode) pBasicBlocks.get(succ.hashCode()).getEntryNode();
+        CLabelNode label = (CLabelNode) pBasicBlocks.get(succ.hashCode()).getEntryNode();
         addEdge(
             new CAssumeEdge(
                 conditionForElse.toASTString(),
@@ -392,7 +388,7 @@ public class CFABuilder {
                 false));
 
         succ = terminatorInst.getSuccessor(1);
-        label = (CFALabelNode) pBasicBlocks.get(succ.hashCode()).getEntryNode();
+        label = (CLabelNode) pBasicBlocks.get(succ.hashCode()).getEntryNode();
         addEdge(
             new CAssumeEdge(
                 conditionForElse.toASTString(),
@@ -409,13 +405,13 @@ public class CFABuilder {
         CType compType = typeConverter.getCType(compValue.typeOf());
         CExpression comparisonLhs = getAssignedIdExpression(compValue, compType, pFileName);
         BasicBlock defaultBlock = terminatorInst.getSuccessor(0);
-        CFALabelNode defaultLabel =
-            (CFALabelNode) pBasicBlocks.get(defaultBlock.hashCode()).getEntryNode();
+        CLabelNode defaultLabel =
+            (CLabelNode) pBasicBlocks.get(defaultBlock.hashCode()).getEntryNode();
 
         CFANode currNode = brNode;
         for (int i = 1; i < succNum; i++) {
-          CFALabelNode label =
-              (CFALabelNode)
+          CLabelNode label =
+              (CLabelNode)
                   pBasicBlocks.get(terminatorInst.getSuccessor(i).hashCode()).getEntryNode();
           Value caseValue = terminatorInst.getOperand(2 * i);
           CExpression comparisonRhs = (CExpression) getConstant(caseValue, pFileName);
@@ -607,7 +603,11 @@ public class CFABuilder {
             curNode = newNode(pFunction);
             addEdge(
                 new CStatementEdge(
-                    expr.toASTString() + i, (CStatement) expr, exprLocation, prevNode, curNode));
+                    expr.toASTString() + i.toString(),
+                    (CStatement) expr,
+                    exprLocation,
+                    prevNode,
+                    curNode));
           }
 
           prevNode = curNode;
@@ -726,6 +726,7 @@ public class CFABuilder {
             logger.logf(Level.WARNING, "Unhandled memory intrinsic!");
         }
         logger.logf(Level.FINE, "Taking intrinsic function call as undefined");
+        pItem.dump();
     }
 
     FileLocation loc = getLocation(pItem, pFileName);
@@ -911,8 +912,8 @@ public class CFABuilder {
     Optional<CExpression> maybeExpression;
     Optional<CAssignment> maybeAssignment;
     if (returnVal == null) {
-      maybeExpression = Optional.empty();
-      maybeAssignment = Optional.empty();
+      maybeExpression = Optional.absent();
+      maybeAssignment = Optional.absent();
 
     } else {
       CType expectedType = typeConverter.getCType(returnVal.typeOf());
@@ -1067,7 +1068,6 @@ public class CFABuilder {
   private CExpression createFromArithmeticOp(
       final Value pItem, final OpCode pOpCode, final String pFileName) throws LLVMException {
     final CType expressionType = typeConverter.getCType(pItem.typeOf());
-    CType internalExpressionType = expressionType;
 
     // TODO: Currently we only support flat expressions, no nested ones. Make this work
     // in the future.
@@ -1110,37 +1110,8 @@ public class CFABuilder {
         operation = BinaryOperator.SHIFT_LEFT;
         break;
       case LShr: // Logical shift right
-        // GNU C performs a logical shift for unsigned types
-        op1type = typeConverter.getCType(operand1.typeOf(), /* isUnsigned = */ true);
-        operand1Exp = castToExpectedType(operand1Exp, op1type, getLocation(pItem, pFileName));
-        // $FALL-THROUGH$
-      case AShr: // Arithmetic shift right
-        if (!(isIntegerType(op1type) && isIntegerType(op2type))) {
-          throw new UnsupportedOperationException(
-              "Right shifts are only supported for integer types, but operands were "
-                  + op1type
-                  + " and "
-                  + op2type);
-        }
-        if (operand2.isConstantInt()) {
-          long op2value = operand2.constIntGetSExtValue();
-          int bitwidthOp1 = operand1.typeOf().getIntTypeWidth();
-          if (op2value < 0 || op2value >= bitwidthOp1) {
-            throw new LLVMException("Shift count is negative or >= width of type");
-          }
-        }
-
-        // operand2 should always be treated as an unsigned value
-        op2type = typeConverter.getCType(operand2.typeOf(), /* isUnsigned = */ true);
-        operand2Exp = castToExpectedType(operand2Exp, op2type, getLocation(pItem, pFileName));
-
-        // GNU C performs an arithmetic shift for signed types
-        // op1type is signed by default for integer types
-        assert pOpCode != AShr || isSignedIntegerType(op1type)
-            : "First operand of right shift wasn't signed in the case of an arithmetic right shift";
-
-        // calculate the shift with the signedness of op1type
-        internalExpressionType = machineModel.applyIntegerPromotion(op1type);
+      case AShr: // arithmetic shift right
+        // TODO Differentiate between logical and arithmetic shift somehow
         operation = BinaryOperator.SHIFT_RIGHT;
         break;
       case And:
@@ -1156,15 +1127,13 @@ public class CFABuilder {
         throw new AssertionError("Unhandled operation " + pOpCode);
     }
 
-    CBinaryExpression expression =
-        new CBinaryExpression(
-            getLocation(pItem, pFileName),
-            internalExpressionType,
-            internalExpressionType, // calculation type is expression type in LLVM
-            operand1Exp,
-            operand2Exp,
-            operation);
-    return castToExpectedType(expression, expressionType, getLocation(pItem, pFileName));
+    return new CBinaryExpression(
+        getLocation(pItem, pFileName),
+        expressionType,
+        expressionType, // calculation type is expression type in LLVM
+        operand1Exp,
+        operand2Exp,
+        operation);
   }
 
   private CExpression getExpression(
@@ -1228,8 +1197,10 @@ public class CFABuilder {
       CType constantType = typeConverter.getCType(pItem.typeOf());
       /* get the name of the type and sanitize it
        * to form a correct C identifier */
-      String typeName = constantType.toString();
-      typeName = CharMatcher.anyOf(" ():").replaceFrom(typeName, "_");
+      String typeName = constantType.toString().replace(' ', '_');
+      typeName = typeName.replace('(', '_');
+      typeName = typeName.replace(')', '_');
+      typeName = typeName.replace(':', '_');
       typeName = typeName.replace("*", "_ptr_");
 
       String undefName = "__VERIFIER_undef_" + typeName;
@@ -1262,8 +1233,7 @@ public class CFABuilder {
         if (!pItem.isExternallyInitialized() || pItem.isGlobalConstant()) {
             return getAssignedIdExpression(pItem, pExpectedType, pFileName);
         } else {
-        throw new UnsupportedOperationException(
-            "LLVM parsing does not support this global variable: " + pItem);
+            throw new UnsupportedOperationException("LLVM parsing does not support this global variable: " + pItem);
         }
     } else {
       throw new UnsupportedOperationException("LLVM parsing does not support constant " + pItem);
@@ -1653,7 +1623,7 @@ public class CFABuilder {
     Optional<CVariableDeclaration> returnVar;
     CType returnType = cFuncType.getReturnType();
     if (returnType.equals(CVoidType.VOID)) {
-      returnVar = Optional.empty();
+      returnVar = Optional.absent();
 
     } else {
       FileLocation returnVarLocation = getLocation(pFuncDef, pFileName);
@@ -1924,6 +1894,6 @@ public class CFABuilder {
 
   private FileLocation getLocation(final Value pItem, final String pFileName) {
     assert pItem != null;
-    return new FileLocation(Path.of(pFileName), 0, 1, 0, 0);
+    return new FileLocation(pFileName, 0, 1, 0, 0);
   }
 }
