@@ -10,6 +10,7 @@ package org.sosy_lab.cpachecker.core.algorithm.pcc;
 
 import java.io.IOException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Collection;
 import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.configuration.Configuration;
@@ -30,6 +31,7 @@ import org.sosy_lab.cpachecker.core.interfaces.StatisticsProvider;
 import org.sosy_lab.cpachecker.core.reachedset.AggregatedReachedSets;
 import org.sosy_lab.cpachecker.core.reachedset.ReachedSet;
 import org.sosy_lab.cpachecker.core.specification.Specification;
+import org.sosy_lab.cpachecker.exceptions.CPAEnabledAnalysisPropertyViolationException;
 import org.sosy_lab.cpachecker.exceptions.CPAException;
 import org.sosy_lab.cpachecker.pcc.util.ValidationConfigurationBuilder;
 import org.sosy_lab.cpachecker.util.error.DummyErrorState;
@@ -43,7 +45,7 @@ public class ConfigReadingProofCheckAlgorithm implements Algorithm, StatisticsPr
       name = "proof",
       description = "file in which proof representation needed for proof checking is stored")
   @FileOption(FileOption.Type.REQUIRED_INPUT_FILE)
-  protected Path proofFile = Path.of("arg.obj");
+  protected Path proofFile = Paths.get("arg.obj");
 
   private final Configuration valConfig;
   private final ProofCheckAlgorithm checkingAlgorithm;
@@ -64,9 +66,8 @@ public class ConfigReadingProofCheckAlgorithm implements Algorithm, StatisticsPr
 
     valConfig = readValidationConfiguration();
 
-    coreFact =
-        new CoreComponentsFactory(
-            valConfig, pLogger, pShutdownNotifier, AggregatedReachedSets.empty());
+    coreFact = new CoreComponentsFactory(valConfig, pLogger, pShutdownNotifier,
+        new AggregatedReachedSets());
 
     ConfigurationBuilder configBuilder = Configuration.builder();
     configBuilder.copyFrom(pConfig);
@@ -104,8 +105,9 @@ public class ConfigReadingProofCheckAlgorithm implements Algorithm, StatisticsPr
   }
 
   @Override
-  public AlgorithmStatus run(ReachedSet pReachedSet) throws CPAException, InterruptedException {
-    ReachedSet internalReached = coreFact.createReachedSet(valCPA);
+  public AlgorithmStatus run(ReachedSet pReachedSet)
+      throws CPAException, InterruptedException, CPAEnabledAnalysisPropertyViolationException {
+    ReachedSet internalReached = coreFact.createReachedSet();
     internalReached.add(
         valCPA.getInitialState(cfa.getMainFunction(), StateSpacePartition.getDefaultPartition()),
         valCPA.getInitialPrecision(cfa.getMainFunction(),
