@@ -20,6 +20,7 @@ import com.google.common.base.Function;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Predicate;
 import com.google.common.base.Predicates;
+import com.google.common.base.Strings;
 import com.google.common.collect.ConcurrentHashMultiset;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Maps;
@@ -41,6 +42,7 @@ import java.io.Writer;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -52,6 +54,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import org.checkerframework.checker.nullness.qual.Nullable;
@@ -87,8 +90,9 @@ import org.sosy_lab.cpachecker.core.algorithm.termination.lasso_analysis.LassoAn
 import org.sosy_lab.cpachecker.core.algorithm.termination.lasso_analysis.RankVar;
 import org.sosy_lab.cpachecker.core.counterexample.CounterexampleInfo;
 import org.sosy_lab.cpachecker.core.reachedset.UnmodifiableReachedSet;
-import org.sosy_lab.cpachecker.core.specification.Property.CommonVerificationProperty;
+import org.sosy_lab.cpachecker.core.specification.Property.CommonPropertyType;
 import org.sosy_lab.cpachecker.core.specification.Specification;
+import org.sosy_lab.cpachecker.core.specification.SpecificationProperty;
 import org.sosy_lab.cpachecker.cpa.arg.ARGState;
 import org.sosy_lab.cpachecker.cpa.arg.path.ARGPath;
 import org.sosy_lab.cpachecker.cpa.arg.witnessexport.Witness;
@@ -112,26 +116,28 @@ import org.sosy_lab.cpachecker.util.states.MemoryLocation;
 public class TerminationStatistics extends LassoAnalysisStatistics {
 
   @Option(
-      secure = true,
-      description =
-          "A human readable representation of the synthesized (non-)termination arguments is "
-              + "exported to this file.")
+    secure = true,
+    description =
+        "A human readable representation of the synthesized (non-)termination arguments is "
+            + "exported to this file."
+  )
   @FileOption(Type.OUTPUT_FILE)
-  private Path resultFile = Path.of("terminationAnalysisResult.txt");
+  private Path resultFile = Paths.get("terminationAnalysisResult.txt");
 
   @Option(
-      secure = true,
-      name = "violation.witness",
-      description = "Export termination counterexample to file as GraphML automaton ")
+    secure = true,
+    name = "violation.witness",
+    description = "Export termination counterexample to file as GraphML automaton "
+  )
   @FileOption(Type.OUTPUT_FILE)
-  private Path violationWitness = Path.of("nontermination_witness.graphml");
+  private Path violationWitness = Paths.get("nontermination_witness.graphml");
 
   @Option(
       secure = true,
       name = "violation.witness.dot",
       description = "Export termination counterexample to file as dot/graphviz automaton ")
   @FileOption(Type.OUTPUT_FILE)
-  private Path violationWitnessDot = Path.of("nontermination_witness.dot");
+  private Path violationWitnessDot = Paths.get("nontermination_witness.dot");
 
   @Option(
     secure = true,
@@ -175,7 +181,12 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
             pConfig,
             pLogger,
             Specification.alwaysSatisfied()
-                .withAdditionalProperties(ImmutableSet.of(CommonVerificationProperty.TERMINATION)),
+                .withAdditionalProperties(
+                    ImmutableSet.of(
+                        new SpecificationProperty(
+                            pCFA.getMainFunction().getFunctionName(),
+                            CommonPropertyType.TERMINATION,
+                            Optional.empty()))),
             pCFA);
     locFac = new LocationStateFactory(pCFA, AnalysisDirection.FORWARD, pConfig);
   }
@@ -406,7 +417,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
 
     for (Entry<String, Integer> terminationArgument : terminationArguementTypes.entrySet()) {
       String name = terminationArgument.getKey();
-      String whiteSpaces = " ".repeat(49 - name.length());
+      String whiteSpaces = Strings.repeat(" ", 49 - name.length());
       pOut.println("  " + name + ":" + whiteSpaces + format(terminationArgument.getValue()));
     }
 
@@ -414,7 +425,9 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
 
     if (pResult == Result.FALSE && (violationWitness != null || violationWitnessDot != null)) {
       Iterator<ARGState> violations =
-          pReached.stream()
+          pReached
+              .asCollection()
+              .stream()
               .filter(AbstractStates::isTargetState)
               .map(s -> AbstractStates.extractStateByType(s, ARGState.class))
               .filter(s -> s.getCounterexampleInformation().isPresent())
@@ -482,33 +495,28 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
 
     Predicate<? super ARGState> relevantStates = Predicates.in(cexStates);
 
-    try {
-      final Witness witness =
-          witnessExporter.generateTerminationErrorWitness(
-              newRoot,
-              relevantStates,
-              BiPredicates.bothSatisfy(relevantStates),
-              state -> Objects.equals(state, loopStartInCEX),
-              provideQuasiInvariant);
+    final Witness witness =
+        witnessExporter.generateTerminationErrorWitness(
+            newRoot,
+            relevantStates,
+            BiPredicates.bothSatisfy(relevantStates),
+            state -> Objects.equals(state, loopStartInCEX),
+            provideQuasiInvariant);
 
-      if (violationWitness != null) {
-        WitnessToOutputFormatsUtils.writeWitness(
-            violationWitness,
-            compressWitness,
-            pAppendable -> WitnessToOutputFormatsUtils.writeToGraphMl(witness, pAppendable),
-            logger);
-      }
+    if (violationWitness != null) {
+      WitnessToOutputFormatsUtils.writeWitness(
+          violationWitness,
+          compressWitness,
+          pAppendable -> WitnessToOutputFormatsUtils.writeToGraphMl(witness, pAppendable),
+          logger);
+    }
 
-      if (violationWitnessDot != null) {
-        WitnessToOutputFormatsUtils.writeWitness(
-            violationWitnessDot,
-            compressWitness,
-            pAppendable -> WitnessToOutputFormatsUtils.writeToDot(witness, pAppendable),
-            logger);
-      }
-    } catch (InterruptedException e) {
-      logger.logUserException(
-          WARNING, e, "Could not export termination witness due to interruption");
+    if (violationWitnessDot != null) {
+      WitnessToOutputFormatsUtils.writeWitness(
+          violationWitnessDot,
+          compressWitness,
+          pAppendable -> WitnessToOutputFormatsUtils.writeToDot(witness, pAppendable),
+          logger);
     }
   }
 
@@ -776,7 +784,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
       return expressionVarName(varName);
     }
 
-    MemoryLocation memLoc = MemoryLocation.parseExtendedQualifiedName(varName);
+    MemoryLocation memLoc = MemoryLocation.valueOf(varName);
     return memLoc.getIdentifier();
   }
 
@@ -816,7 +824,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
       result = result.substring(1, result.length() - 1);
     }
 
-    MemoryLocation memLoc = MemoryLocation.parseExtendedQualifiedName(result);
+    MemoryLocation memLoc = MemoryLocation.valueOf(result);
     return memLoc.getIdentifier();
   }
 
