@@ -49,6 +49,7 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.sosy_lab.cpachecker.cfa.DummyCFAEdge;
 import org.sosy_lab.cpachecker.cfa.model.AssumeEdge;
@@ -133,7 +134,11 @@ public class ARGUtils {
     while (!waitlist.isEmpty()) {
       ARGState current = waitlist.pop();
       List<ARGState> children =
-          from(current.getChildren()).filter(Predicates.in(pRelevantStates)).toList();
+          current
+              .getChildren()
+              .stream()
+              .filter(Predicates.in(pRelevantStates))
+              .collect(Collectors.toList());
       if (children.size() > 2) {
         return true;
       } else if (children.size() == 2) {
@@ -400,13 +405,13 @@ public class ARGUtils {
     return new ARGPath(states);
   }
 
-  private static boolean isRelevantLocation(CFANode pInput) {
+  private static final boolean isRelevantLocation(CFANode pInput) {
     return pInput.isLoopStart()
         || pInput instanceof FunctionEntryNode
         || pInput instanceof FunctionExitNode;
   }
 
-  private static boolean containsRelevantLocation(Iterable<CFANode> nodes) {
+  private static final boolean containsRelevantLocation(Iterable<CFANode> nodes) {
     return Iterables.any(nodes, ARGUtils::isRelevantLocation);
   }
 
@@ -510,9 +515,8 @@ public class ARGUtils {
         ARGState trueChild = null;
         ARGState falseChild = null;
 
-          Iterable<CFANode> locs = AbstractStates.extractLocations(currentElement);
-          if (Iterables.any(
-              locs, loc -> !leavingEdges(loc).allMatch(Predicates.instanceOf(AssumeEdge.class)))) {
+        CFANode loc = AbstractStates.extractLocation(currentElement);
+        if (!leavingEdges(loc).allMatch(Predicates.instanceOf(AssumeEdge.class))) {
           throw new IllegalArgumentException("ARG branches where there is no AssumeEdge!");
         }
 
