@@ -15,16 +15,19 @@ import com.google.common.base.Joiner;
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableMap;
 import com.google.errorprone.annotations.CanIgnoreReturnValue;
+import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.Writer;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 import org.junit.Test;
 import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.configuration.ConfigurationBuilder;
@@ -55,7 +58,7 @@ public class WitnessExporterTest {
 
     private final String fileName;
 
-    WitnessGenerationConfig(String pConfigName) {
+    private WitnessGenerationConfig(String pConfigName) {
       fileName = String.format("witnessGeneration-%s.properties", pConfigName);
     }
   }
@@ -108,7 +111,7 @@ public class WitnessExporterTest {
         .performTest();
   }
 
-  @Test(timeout = 200000)
+  @Test(timeout = 90000)
   public void concurrency_false_mix000_power() throws Exception {
     new WitnessTester(
             "mix000_power.oepc.i", ExpectedVerdict.FALSE, WitnessGenerationConfig.BDD_CONCURRENCY)
@@ -169,7 +172,7 @@ public class WitnessExporterTest {
       WitnessGenerationConfig pGenerationConfig,
       Map<String, String> pOverrideOptions)
       throws Exception {
-    String fullPath = Path.of(TEST_DIR_PATH, pFilename).toString();
+    String fullPath = Paths.get(TEST_DIR_PATH, pFilename).toString();
 
     TempCompressedFilePath witnessPath = new TempCompressedFilePath("witness", ".graphml");
 
@@ -226,22 +229,30 @@ public class WitnessExporterTest {
   }
 
   private static String getInvGenFile(TempCompressedFilePath pWitnessPath) throws IOException {
-    Path origInvGenConfigFile = Path.of("test/config/invariantGeneration-witness.properties");
+    Path origInvGenConfigFile = Paths.get("test/config/invariantGeneration-witness.properties");
     Path invGenConfigFile =
         origInvGenConfigFile.resolveSibling(
             pWitnessPath.uncompressedFilePath.getFileName() + ".properties");
     invGenConfigFile.toFile().deleteOnExit();
     Files.copy(origInvGenConfigFile, invGenConfigFile);
-    List<String> lines = Files.readAllLines(invGenConfigFile);
+    List<String> lines;
+    try (BufferedReader reader = Files.newBufferedReader(invGenConfigFile)) {
+      lines =
+          reader
+              .lines()
+              .map(
+                  line -> {
+                    Matcher matcher = PROOF_WITNESS_OPTION_PATTERN.matcher(line);
+                    if (matcher.matches()) {
+                      return matcher.group(1) + pWitnessPath.uncompressedFilePath.toString();
+                    }
+                    return line;
+                  })
+              .collect(Collectors.toList());
+    }
     try (Writer writer = IO.openOutputFile(invGenConfigFile, Charsets.UTF_8)) {
       for (String line : lines) {
-        Matcher matcher = PROOF_WITNESS_OPTION_PATTERN.matcher(line);
-        if (matcher.matches()) {
-          writer.write(matcher.group(1));
-          writer.write(pWitnessPath.uncompressedFilePath.toString());
-        } else {
-          writer.write(line);
-        }
+        writer.write(line);
         writer.write(System.lineSeparator());
       }
     }
@@ -319,8 +330,7 @@ public class WitnessExporterTest {
               .toAbsolutePath();
       Path compressedFileNamePath = compressedFilePath.getFileName();
       if (compressedFileNamePath == null) {
-        throw new AssertionError(
-            "Files obtained from TempFile.builder().create() should always have a file name.");
+        throw new AssertionError("Files obtained from TempFile.builder().create() should always have a file name.");
       }
       String fileName = compressedFileNamePath.toString();
       String uncompressedFileName =
